--- a/style.css
+++ b/style.css
@@ -7,26 +7,34 @@
 } */
 
 body {
-  display: flex;
+  display: grid;
+  position: relative;
 }
 
 #hell_house {
-  display: flex;
-  background-image: url("hellHouse.png");
-  background-color: #cccccc;
-  width: 100vw;
-  height: 100vw;
+  display: ;
+  width: 100%;
+  z-index: -1;
+  position: absolute;
 }
 
 #menu {
-  display: flex;
+  display: ;
+  position: absolute;
+  top: 20px;
+  right: 140px;
+  opacity: 0.3;
+  border-radius: 5px;
   font-family: 'Maven Pro', sans-serif;
   background-color: grey;
   text-align: center;
 }
 
 #title {
-  display: flex;
+  display: ;
   font-family: 'Nosifer', cursive;
   color: darkred;
+  position: absolute;
+  top: 250px;
+  left: 200px;
 }
