--- a/aboutUs.css
+++ b/aboutUs.css
@@ -1,6 +1,7 @@
 body{
   background-color: black;
 }
+
 header{
   color: white;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -8,38 +9,178 @@ header{
   padding-top: 20px;
   font-size: 30px;
 }
+main{
+  margin-top: 2%;
+}
 #pentagram{
-  width: 700px;
-  height: 700px;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  height:75%;
+  width:75%;
+  z-index: 0;
 }
 #anthony{
-  position: relative;
-  left: 700px;
-  bottom: 200px;
-  height: 125px;
+  z-index: 1;
+  height: 100px;
+  width: 100px;
+}
+#anthonyDiv{
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  left: 35%;
+  bottom: 5%;
+  z-index: 1;
 }
 #andrea{
-  position: relative;
-  height: 125px;
-  width: 125px;
-  left: 360px;
-  bottom: 290px;
+  z-index: 1;
+  height: 100px;
+}
+#andreaDiv{
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  left: 64%;
+  bottom: 49%;
 }
 #george{
-  position: relative;
-  height: 125px;
-  width: 125px;
-  left: 240px;
-  bottom: 530px;
+  z-index: 1;
+  height: 100px;
+}
+#georgeDiv{
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  left: 57%;
+  bottom: 5%;
 }
 #zack{
-  position: relative;
-  height: 125px;
-  width: 125px;
-  left: 240px;
-  bottom: 530px;
+  z-index: 1;
+  height: 100px;
+}
+#zackDiv{
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  left: 46%;
+  bottom: 75%;
+  z-index: 1;
+}
+#roop{
+  z-index: 1;
+  height: 100px;
+  width: 100px;
+}
+#roopDiv{
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  left: 28%;
+  bottom: 49%;
+}
+.profile:hover{
+  cursor: pointer;
+  box-shadow: 0 0 30px red;
+}
+.popup{
+  color: white;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.profile .popup{
+  visibility: hidden;
+}
+
+.profile .popup{
+  visibility: hidden;
+  /* margin-left: -80px; */
+}
+#anthonyPopUp{
+  width: 425px;
+  height: 250px;
+  background-color: #555;
+  color: #fff;
+  border-radius: 6px;
+  padding: 20px;
+  position: absolute;
+  z-index: 1;
+  bottom: 1%;
+  right: 125%;
+}
+#georgePopUp{
+  width: 425px;
+  height: 250px;
+  background-color: #555;
+  color: #fff;
+  border-radius: 6px;
+  padding: 20px;
+  position: absolute;
+  z-index: 1;
+  bottom: 1%;
+  left: 125%;
+}
+#andreaPopUp{
+  width: 360px;
+  height: 300px;
+  background-color: #555;
+  color: #fff;
+  border-radius: 6px;
+  padding: 20px;
+  position: absolute;
+  z-index: 1;
+  bottom: 1%;
+  left: 125%;
+}
+#roopPopUp{
+  width: 340px;
+  height: 300px;
+  background-color: #555;
+  color: #fff;
+  border-radius: 6px;
+  padding: 20px;
+  position: absolute;
+  z-index: 1;
+  bottom: 1%;
+  right: 125%;
+}
+#zackPopUp{
+  width: 360px;
+  height: 315px;
+  background-color: #555;
+  color: #fff;
+  border-radius: 6px;
+  padding: 20px;
+  position: absolute;
+  z-index: 1;
+  top: 120%;
+  right: -150%;
+}
+
+.profile .popup::after {
+  content: "";
+  /* position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px; */
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+.profile .show{
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s
+}
+
+@-webkit-keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
+@keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity:1 ;}
 }
