--- a/aboutUs.css
+++ b/aboutUs.css
@@ -85,11 +85,25 @@ main{
 }
 .popup{
   color: white;
+  font-size: 15px;
+  line-height: 1.5;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  padding: 7px;
 }
+.popup p{
+  margin-top: 2px;
+  margin-left: 5px;
+}
+.popup p:nth-child(1)
+{
+  margin-top: 20px;
+  font-weight: bold;
+  font-size: 20px;
+}
+
 .profile .popup{
   visibility: hidden;
 }
@@ -99,12 +113,10 @@ main{
   /* margin-left: -80px; */
 }
 #anthonyPopUp{
-  width: 425px;
+  width: 475px;
   height: 250px;
   background-color: #555;
-  color: #fff;
   border-radius: 6px;
-  padding: 20px;
   position: absolute;
   z-index: 1;
   bottom: 1%;
@@ -178,9 +190,18 @@ main{
 
 @-webkit-keyframes fadeIn {
   from {opacity: 0;}
-  to {opacity: 1;}
+  to {opacity: 2;}
 }
 @keyframes fadeIn {
   from {opacity: 0;}
   to {opacity:1 ;}
+}
+
+a:link{
+  color: red;
+  text-decoration: none;
+}
+a:visited{
+  color: red;
+  text-decoration: none;
 }
