--- a/css/living_room.css
+++ b/css/living_room.css
@@ -3,10 +3,6 @@ html, body {
   padding:0;
 }
 
-body {
-  background-color: rgb(15, 6, 6);;
-}
-
 .comic {
   display:flex;
   flex-wrap:wrap;
@@ -49,14 +45,13 @@ body {
 }
 
 .speech {
-  background-color:#fff;
+  background-color:rgba(179, 139, 7, 0.849);
   border:solid 2px #000;
   border-radius:12px;
   display:inline-block;
   margin:.5em;
   padding:.5em 1em;
   position:relative;
-  height: 100px;
 }
 
 .speech:before {
@@ -75,8 +70,8 @@ body {
 
 .speech:after {
   border:solid 10px transparent;
-  border-left:solid 10px #fff;
-  border-top:solid 10px #fff;
+  border-left:solid 10px rgba(179, 139, 7, 0.849);
+  border-top:solid 10px rgba(179, 139, 7, 0.849);
   bottom:-19px;
   content:"";
   height:0;
@@ -87,23 +82,19 @@ body {
 }
 
 .panel:nth-child(1) {
-  flex-basis: 130px;
+  flex-basis: 400px;
 }
 .panel:nth-child(2) {
   flex-basis: 200px;
 }
 .panel:nth-child(3) {
-  flex-basis: 200px;
-}
-.panel:nth-child(4) {
-  display: flex;
-  justify-content: flex-end;
   flex-basis: 700px;
 }
+.panel:nth-child(4) {
+  flex-basis: 300px;
+}
 .panel:nth-child(5) {
-  display: flex;
-  flex-basis: 350px;
-  justify-content: flex-end;
+  flex-basis: 300px;
 }
 .panel:nth-child(6) {
   flex-basis: 200px;
@@ -112,41 +103,16 @@ body {
 }
 
 img#kingGeorge {
-  width: 100%;
+  width: 80%;
   object-fit: cover;
   position: relative;
   opacity: .8;
 }
 
-img#milk {
-  width: 140%;
-  object-fit: cover;
-  position: relative;
-  right: 30px;
-  bottom: -10px;
-}
-
-img#shotgun {
-  width: 150%;
-  object-fit: cover;
-  position: relative;
-}
-
-img#real_coin {
-  width: 100%;
-  object-fit: cover;
-  position: relative;
-  bottom: 0px;
-}
-
-#headsOrTails {
-  text-align: center
-}
- 
 /* background colours */
 
 .panel:nth-child(1) {
-  background-image:radial-gradient(circle, darkred, rgb(0, 0, 0));
+  background-image:radial-gradient(circle, rgb(56, 53, 53), rgb(0, 0, 0));
   font-family: 'Bangers', cursive;
 }
 
@@ -170,7 +136,4 @@ button {
   color: darkred;
   font-family: 'Nosifer', cursive;
   font-size: 10%;
-}
-
-li#player_info {
 }
