--- a/css/coinFlipRoom.css
+++ b/css/coinFlipRoom.css
@@ -17,6 +17,7 @@ body {
 .panel {
   background-color:#fff;
   border:solid 2px #000;
+  border-radius: 7px;
   box-shadow:0 6px 6px -6px #000;
   display:inline-block;
   flex:1 1;
