taking a dinner break

--- a/css/coinFlipRoom.css
+++ b/css/coinFlipRoom.css
@@ -50,14 +50,14 @@ body {
 }
 
 .speech {
-  background-color:#fff;
+  background-color:rgba(179, 139, 7, 0.849);
   border:solid 2px #000;
   border-radius:12px;
   display:inline-block;
   margin:.5em;
   padding:.5em 1em;
   position:relative;
-  height: 100px;
+  height: 120px;
 }
 
 .speech:before {
@@ -76,8 +76,8 @@ body {
 
 .speech:after {
   border:solid 10px transparent;
-  border-left:solid 10px #fff;
-  border-top:solid 10px #fff;
+  border-left:solid 10px rgba(179, 139, 7, 0.849);
+  border-top:solid 10px rgba(179, 139, 7, 0.849);
   bottom:-19px;
   content:"";
   height:0;
@@ -112,7 +112,7 @@ body {
   height: 100px;
 }
 
-img#kingGeorge {
+img#kingGeorge:first-child {
   width: 100%;
   object-fit: cover;
   position: relative;
