--- a/css/coinFlipRoom.css
+++ b/css/coinFlipRoom.css
@@ -7,6 +7,7 @@ body {
   background-color: rgb(15, 6, 6);;
 }
 
+/* COMIC PANELS AND EFFECTS*/
 .comic {
   display:flex;
   flex-wrap:wrap;
@@ -111,12 +112,17 @@ body {
   margin-top: 100px;
   height: 100px;
 }
+ 
+/* background colours */
 
-img#kingGeorge:first-child {
-  width: 100%;
-  object-fit: cover;
-  position: relative;
-  opacity: .8;
+.panel:nth-child(1) {
+  background-image:radial-gradient(circle, darkred, rgb(0, 0, 0));
+  font-family: 'Bangers', cursive;
+}
+
+.panel {
+  background-image:radial-gradient(circle, rgb(172, 177, 179), rgb(8, 19, 22));
+  font-family: 'Bangers', cursive;
 }
 
 img#milk {
@@ -124,7 +130,7 @@ img#milk {
   object-fit: cover;
   position: relative;
   right: 30px;
-  bottom: -10px;
+  bottom: 5px;
 }
 
 img#shotgun {
@@ -142,18 +148,6 @@ img#real_coin {
 
 #headsOrTails {
   text-align: center
-}
- 
-/* background colours */
-
-.panel:nth-child(1) {
-  background-image:radial-gradient(circle, darkred, rgb(0, 0, 0));
-  font-family: 'Bangers', cursive;
-}
-
-.panel {
-  background-image:radial-gradient(circle, rgb(172, 177, 179), rgb(8, 19, 22));
-  font-family: 'Bangers', cursive;
 }
 
 button {
