--- a/css/coinFlipRoom.css
+++ b/css/coinFlipRoom.css
@@ -172,6 +172,8 @@ button {
   font-family: 'Nosifer', cursive;
   font-size: 10%;
 }
-
+#lives{
+  background-color: white;;
+}
 li#player_info {
 }
