--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 body {
   display: grid;
   position: relative;
+  background-color: black;
 }
 
 #hell_house {
@@ -31,8 +32,9 @@ body {
 
 #title {
   font-family: 'Nosifer', cursive;
+  text-align: center;
   color: darkred;
   position: absolute;
-  top: 250px;
-  left: 200px;
+  top: 220px;
+  left: 335px;
 }
