--- a/css/coinFlipRoom.css
+++ b/css/coinFlipRoom.css
@@ -119,7 +119,8 @@ html, body {
 }
 
 .panel:nth-child(6) {
-  flex-basis: 200px;
+  min-width: 200px;
+  max-width: 350px;
 }
  
 /* background colors */
@@ -145,6 +146,9 @@ img#roop {
 
 img#roopTwo {
   width: 50%;
+  height: 100%;
+  object-fit: cover;
+  position: relative;
 }
 
 img#milk {
@@ -157,6 +161,7 @@ img#milk {
 
 img#shotgun {
   width: 150%;
+  height: 100%;
   object-fit: cover;
   position: relative;
 }
