--- a/css/riddleRoom.css
+++ b/css/riddleRoom.css
@@ -1,7 +1,7 @@
 html, body {
   margin:0;
   padding:0;
-  background-color: black;
+  background-color: transparent;
 }
 
 .hidden{
@@ -109,7 +109,11 @@ html, body {
   justify-content: flex-end;
 }
 .panel:nth-child(5) {
-  min-width: 250px;
+  min-width: 150px;
+  max-width: 300px;
+}
+.panel:nth-child(6) {
+  min-width: 200px;
   max-width: 300px;
 }
 
@@ -132,6 +136,7 @@ html, body {
 
 img#anthony {
   width: 95%;
+  height: 100%;
   object-fit: cover;
   object-position: center;
 }
@@ -150,7 +155,22 @@ img#skull {
   z-index: 0;
 }
 
-form#riddle1 {
+img#livingRoom {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+img#anthonyTwo {
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  position: relative;
+  bottom: 30px;
+}
+
+#riddleSubmit {
   font-family: 'Nosifer', cursive;
   color: darkred;
   z-index: 1;
@@ -175,5 +195,9 @@ button {
 
 ul#player_info {
   position: relative;
-  bottom: -30px;
+  bottom: -20px;
+}
+
+li {
+  margin: 10px;
 }
