--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,10 @@
-/* #hell_house { 
-  background: url(images/hellHouse.png) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-} */
-
 body {
   display: grid;
   position: relative;
   background-color: black;
 }
+
+/* ------------- Image ---------------- */
 
 #hell_house {
   width: 100%;
@@ -18,23 +12,100 @@ body {
   position: absolute;
 }
 
-#menu {
-  position: absolute;
-  top: 20px;
-  right: 140px;
-  opacity: 0.7;
-  border-radius: 5px;
-  font-size: large;
-  font-family: 'Maven Pro', sans-serif;
-  background-color: grey;
-  text-align: center;
-}
+/* ------------- Title ---------------- */
 
 #title {
   font-family: 'Nosifer', cursive;
   text-align: center;
-  color: darkred;
+  color: rgb(138, 31, 31);
   position: absolute;
-  top: 220px;
-  left: 335px;
+  /* background-color: rgba(148, 148, 148, 0.637); */
+  top: 175px;
+  left: 120px;
+  font-size: 2cm;
+  transform: rotate(2500deg);
+}
+
+/* ----------------- Menu ---------------- */
+
+#menu {
+  position: absolute;
+  top: 0px;
+  right: 180px;
+  opacity: 0.8;
+  background-color: rgb(148, 148, 148);
+  border-radius: 15px;
+  padding: 10px;
+  padding-bottom: 0%;
+  width: 100px;
+  height: 90px;
+  font-size: large;
+  font-family: 'Maven Pro', sans-serif;
+  text-align: center;
+}
+
+.button {
+  background-color: rgb(148, 148, 148);
+  border: none;
+  border-radius: 5px;
+  color: black;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-weight: bolder;
+}
+
+.button:hover {
+  color: white;
+  background-color: rgb(48, 48, 48);
+  font-weight: bolder;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+  font-weight: bolder;
+}
+
+a:hover {
+  color: white;
+  text-decoration:none; 
+  cursor:pointer;
+  font-weight: bolder;
+}
+
+/* ---------------- Info Fields ---------------- */
+
+legend {
+  text-decoration-line: underline;
+}
+
+#userinfo {
+  opacity: 0.91;
+  background-color: rgb(148, 148, 148);
+  border-radius: 15px;
+  padding: 10px;
+  padding-bottom: 0%;
+  width: 500px;
+  height: 90px;
+  font-size: large;
+  font-family: 'Maven Pro', sans-serif;
+  text-align: center;
+  font-weight: 900;
+}
+
+input[type=text] {
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-size: large;
+}
+
+input[type=number] {
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
 }
