--- a/css/rpsRoom.css
+++ b/css/rpsRoom.css
@@ -109,12 +109,13 @@ html, body {
   flex-basis: 350px;
 }
 .panel:nth-child(5) {
+  min-width: 350px;
+  max-width: 500px;
   display: flex;
-  flex-basis: 300px;
-  justify-content: flex-end;
+  justify-content: right;
 }
 .panel:nth-child(6) {
-  min-width: 170px;
+  min-width: 200px;
   max-width: 400px;
 }
 
@@ -125,7 +126,7 @@ img#zack {
 }
 
 img#zackTwo {
-  width: 50%;
+  width: 60%;
 }
 
 img#bloodyRock {
