--- a/css/youDied.css
+++ b/css/youDied.css
@@ -11,7 +11,7 @@
   position: fixed;
   height: 40%;
   width: 30%;
-  bottom: 4%;
+  top: 4%;
   right: 2%;
   text-align: center;
   color: darkred;
@@ -22,7 +22,7 @@
   box-shadow:0 6px 6px -6px #000;
   background-image: radial-gradient(circle, rgb(172, 177, 179), rgb(8, 19, 22));
   font-family: Nosifer;
-  z-index: 0;
+  z-index: 6;
 
 }
 #victoryMenu p:first-of-type{
@@ -100,47 +100,102 @@ a:link{
 a:visited{
   color: darkred;
 }
-.typewriter p:first-of-type{
-  margin-top: 9%;
+#victoryMenu{
+  opacity: 0;
+  animation: fadein2 19s ease-in 12s 1 normal forwards;
+  -webkit-animation: fadein2 19s ease-in 12s 1 normal forwards;
+  -moz-animation: fadein2 19s ease-in 12s 1 normal forwards;
+  -o-animation: fadein2 19s ease-in 12s 1 normal forwards;
+  -ms-animation: fadein2 19s ease-in 12s 1 normal forwards;
+  
 }
+
+@keyframes fadein2{
+  0% { opacity:0; }
+  66% { opacity:0; }
+  100% { opacity:1; }
+}
+
+@-webkit-keyframes fadein2{
+  0% { opacity:0; }
+  66% { opacity:0; }
+  100% { opacity:1; }
+}
+@-moz-keyframes fadein2{
+  0% { opacity:0; }
+  66% { opacity:0; }
+  100% { opacity:1; }
+}
+@-o-keyframes fadein2{
+  0% { opacity:0; }
+  66% { opacity:0; }
+  100% { opacity:1; }
+}
+@-ms-keyframes fadein2{
+  0% { opacity:0; }
+  66% { opacity:0; }
+  100% { opacity:1; }
+}
+#congrats{
+  opacity: 0%;
+  -webkit-animation: fadeinout 25s;
+  -moz-animation: fadeInout 25s;
+  -o-animation: fadeIn 25s;
+  -ms-animation: fadeIn 25s;
+  animation: fadeinout 25s;
+}
+
+@-webkit-keyframes fadeinout {
+0%, 100% { opacity: 0; }
+45% { opacity: 1; }
+69% { opacity: 1; }
+}
+
+@keyframes fadeinout {
+0%,100% { opacity: 0; }
+45% { opacity: 1; }
+69% { opacity: 1; }
+}
+
 .typewriter p:first-child {
   white-space: nowrap;
   overflow: hidden;
   margin: 0 auto;
-  animation: animated-text 4s steps(29,end) 1s 1 normal both,
+  animation: animated-text 5.25s steps(29,end) 1s 1 normal both,
              animated-cursor 600ms steps(29,end) infinite;
+  animation-delay: 4s;
 }
 .typewriter p:nth-child(2) {
   white-space: nowrap;
   overflow: hidden;
   margin: 0 auto;
-  animation: animated-text2 4s steps(29,end) 1s 1 normal both,
+  animation: animated-text2 5.5s steps(29,end) 1s 1 normal both,
              animated-cursor2 600ms steps(29,end) infinite;
-  animation-delay: 3s;
+  animation-delay: 7s;
 }
 .typewriter p:nth-child(3) {
   white-space: nowrap;
   overflow: hidden;
   margin: 0 auto;
-  animation: animated-text3 4s steps(29,end) 1s 1 normal both,
+  animation: animated-text3 5.5s steps(29,end) 1s 1 normal both,
              animated-cursor3 600ms steps(29,end) infinite;
-  animation-delay: 6s;
+  animation-delay: 9.25s;
 }
 .typewriter p:nth-child(4) {
   white-space: nowrap;
   overflow: hidden;
   margin: 0 auto;
-  animation: animated-text4 4s steps(29,end) 1s 1 normal both,
+  animation: animated-text4 8s steps(29,end) 1s 1 normal both,
              animated-cursor4 600ms steps(29,end) infinite;
-  animation-delay: 10s;
+  animation-delay: 12.5s;
 }
 .typewriter p:nth-child(5) {
   white-space: nowrap;
   overflow: hidden;
   margin: 0 auto;
-  animation: animated-text5 4s steps(29,end) 1s 1 normal both,
+  animation: animated-text5 8s steps(29,end) 1s 1 normal both,
              animated-cursor5 600ms steps(29,end) infinite;
-  animation-delay: 12s;
+  animation-delay: 14.75s;
 }
 
 @keyframes animated-text{
@@ -201,4 +256,104 @@ a:visited{
 }
 .typewriter p:first-of-type{
   margin-top: 9%;
+}
+
+#saraImage{
+  animation: fadeIn 60s;
+  -webkit-animation: fadeIn 60s;
+  -moz-animation: fadeIn 60s;
+  -o-animation: fadeIn 60s;
+  -ms-animation: fadeIn 60s;
+}
+@keyframes fadeIn {
+  0%,100% {opacity:0;}
+  20% {opacity:0.00;}
+  30% {opacity:0.06;}
+  33% {opacity:0.08;}
+  36% {opacity:0.1;}
+  39% {opacity:0.15;}
+  44% {opacity:0.25;}
+  48% {opacity:0.3;}
+  52% {opacity:0.5;}
+  55% {opacity:0.55;}
+  58% {opacity:0.6;}
+  62% {opacity:0.7;}
+  64% {opacity:0.8;}
+  67% {opacity:0.85;}
+  70% {opacity:0.9;}
+  100% {opacity:1;}
+}
+
+@-moz-keyframes fadeIn {
+  0%,100% {opacity:0;}
+  20% {opacity:0.00;}
+  30% {opacity:0.06;}
+  33% {opacity:0.08;}
+  36% {opacity:0.1;}
+  39% {opacity:0.15;}
+  44% {opacity:0.25;}
+  48% {opacity:0.3;}
+  52% {opacity:0.5;}
+  55% {opacity:0.55;}
+  58% {opacity:0.6;}
+  62% {opacity:0.7;}
+  64% {opacity:0.8;}
+  67% {opacity:0.85;}
+  70% {opacity:0.9;}
+  100% {opacity:1;}
+}
+
+@-webkit-keyframes fadeIn {
+  0%,100% {opacity:0;}
+  20% {opacity:0.00;}
+  30% {opacity:0.06;}
+  33% {opacity:0.08;}
+  36% {opacity:0.1;}
+  39% {opacity:0.15;}
+  44% {opacity:0.25;}
+  48% {opacity:0.3;}
+  52% {opacity:0.5;}
+  55% {opacity:0.55;}
+  58% {opacity:0.6;}
+  62% {opacity:0.7;}
+  64% {opacity:0.8;}
+  67% {opacity:0.85;}
+  70% {opacity:0.9;}
+  100% {opacity:1;}
+}
+@-o-keyframes fadeIn {
+  0%,100% {opacity:0;}
+  20% {opacity:0.00;}
+  30% {opacity:0.06;}
+  33% {opacity:0.08;}
+  36% {opacity:0.1;}
+  39% {opacity:0.15;}
+  44% {opacity:0.25;}
+  48% {opacity:0.3;}
+  52% {opacity:0.5;}
+  55% {opacity:0.55;}
+  58% {opacity:0.6;}
+  62% {opacity:0.7;}
+  64% {opacity:0.8;}
+  67% {opacity:0.85;}
+  70% {opacity:0.9;}
+  100% {opacity:1;}
+}
+@-ms-keyframes fadeIn {
+  0%,100% {opacity:0;}
+  20% {opacity:0.00;}
+  30% {opacity:0.06;}
+  33% {opacity:0.08;}
+  36% {opacity:0.1;}
+  39% {opacity:0.15;}
+  44% {opacity:0.25;}
+  48% {opacity:0.3;}
+  52% {opacity:0.5;}
+  55% {opacity:0.55;}
+  58% {opacity:0.6;}
+  62% {opacity:0.7;}
+  64% {opacity:0.8;}
+  67% {opacity:0.85;}
+  70% {opacity:0.9;}
+  100% {opacity:1;}
 }
