altered about us page

--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -4,10 +4,11 @@ body{
 
 header{
   color: darkred;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  text-align: center;
+  font-family: 'Nosifer', cursive;
+  text-align: left;
+  display: block;
   padding-top: 20px;
-  font-size: 30px;
+  font-size: 40px;
 }
 main{
   margin-top: 2%;
@@ -24,69 +25,78 @@ main{
   z-index: 1;
   height: 100px;
   width: 100px;
+  border-radius: 50%;
 }
 #anthonyDiv{
   position: absolute;
   height: 100px;
   width: 100px;
   left: 35%;
-  bottom: 5%;
+  bottom: 9%;
   z-index: 1;
 }
 #andrea{
   z-index: 1;
   height: 100px;
+  border-radius: 50%;
 }
 #andreaDiv{
   position: absolute;
   height: 100px;
   width: 100px;
-  left: 64%;
-  bottom: 49%;
+  left: 67%;
+  bottom: 50%;
 }
 #george{
   z-index: 1;
   height: 100px;
+  border-radius: 50%;
+
 }
 #georgeDiv{
   position: absolute;
   height: 100px;
   width: 100px;
-  left: 57%;
-  bottom: 5%;
+  left: 58%;
+  bottom: 7%;
 }
 #zack{
   z-index: 1;
   height: 100px;
+  border-radius: 50%;
 }
 #zackDiv{
   position: absolute;
   height: 100px;
   width: 100px;
-  left: 47%;
-  bottom: 75%;
-  z-index: 1;
+  left: 46.5%;
+  bottom: 79%;
+  z-index: 3;
 }
 #roop{
   z-index: 1;
   height: 100px;
   width: 100px;
+  border-radius: 50%;
 }
 #roopDiv{
   position: absolute;
   height: 100px;
   width: 100px;
-  left: 28%;
+  left: 26%;
   bottom: 49%;
 }
 .profile:hover{
   cursor: pointer;
   box-shadow: 0 0 30px red;
+  border-radius: 50%;
 }
 .popup{
-  color: red;
-  background-color: white;
+  color: black;
+  background-color: rgba(214, 207, 207, 0.932);
+  font-family: 'Titillium Web', sans-serif;
   font-size: 15px;
+  font-weight: bolder;
   line-height: 1.25;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -182,10 +192,30 @@ main{
 }
 
 a:link{
-  color: darkorange;
+  color: darkred;
   text-decoration: none;
+  font-weight: bolder;
 }
 a:visited{
-  color: darkorange;
+  color: darkred;
   text-decoration: none;
+  font-weight: bolder;
+}
+
+#sara {
+  z-index: 1;
+  position: absolute;
+  height: 85px;
+  width: 85px;
+  border-radius: 50%;
+  left: 47.5%;
+  bottom: 41%;
+}
+
+#saraFire {
+  z-index: 2;
+  position: absolute;
+  height: 29%;
+  left: 45%;
+  bottom: 48%;
 }
