--- a/css/style.css
+++ b/css/style.css
@@ -17,13 +17,14 @@ body {
 #title {
   font-family: 'Nosifer', cursive;
   text-align: center;
-  color: rgb(138, 31, 31);
+  color: darkred;
   position: absolute;
   /* background-color: rgba(148, 148, 148, 0.637); */
   top: 175px;
   left: 120px;
-  font-size: 2cm;
+  font-size: 2.5cm;
   transform: rotate(2500deg);
+  text-shadow: 5px 5px 5px rgb(9, 1, 1);
 }
 
 /* ----------------- Menu ---------------- */
@@ -79,6 +80,7 @@ a:hover {
 
 legend {
   text-decoration-line: underline;
+  padding-bottom: 5px;
 }
 
 #userinfo {
@@ -88,7 +90,7 @@ legend {
   padding: 10px;
   padding-bottom: 0%;
   width: 500px;
-  height: 90px;
+  height: 128px;
   font-size: large;
   font-family: 'Maven Pro', sans-serif;
   text-align: center;
@@ -101,6 +103,7 @@ input[type=text] {
   border-radius: 4px;
   box-sizing: border-box;
   font-size: large;
+  margin-bottom: 5px;
 }
 
 input[type=number] {
@@ -108,4 +111,5 @@ input[type=number] {
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
+  margin-bottom: 5px;
 }
